2/17/22
Added routing for all libraries
-working on activating all links to them
implemented library sidebars
made home page the default route