@@ -46,7 +46,7 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="#">Skies</a>
+                <a class="btn btn-toggle align-items-center text-white rounded collapsed" href="#">Skies</a>
             </li>
         </ul>
 
